# avahi

./: .clang-format  .codespellrc  .gitignore  .packit.yml  .travis.yml  HACKING  INSTALL  Makefile  Makefile.am  README  SECURITY.md  acinclude.m4  address.c  address.h  announce.c  announce.h  autogen.sh  avahi-client.pc.in  avahi-compat-bonjour.pc.in  avahi-compat-howl.pc.in  avahi-compat-libdns_sd.pc.in  avahi-core.pc.in  avahi-glib.pc.in  avahi-gobject.pc.in  avahi-libevent.pc.in  avahi-qt3.pc.in  avahi-qt4.pc.in  avahi-qt5.pc.in  avahi-qt6.pc.in  avahi-sharp.pc.in  avahi-ui-gtk3.pc.in  avahi-ui-gtk4.pc.in  avahi-ui-sharp.pc.in  avahi-ui.pc.in  bootstrap.sh  cache.c  cache.h  configure.ac  dns-test.c  dns.c  (+34 more)
avahi-autoipd/: .gitignore  Makefile.am  avahi-autoipd.action  avahi-autoipd.action.bsd  avahi-autoipd.action.linux  dhclient-enter-hook.in  dhclient-exit-hook.in  iface-bsd.c  iface-linux.c  iface.h  main.c  main.h
avahi-client/: .gitignore  Makefile.am  browser.c  check-nss-test.c  check-nss.c  client-test.c  client.c  client.h  dbus-watch-glue.c  entrygroup.c  internal.h  lookup.h  publish.h  resolver.c  rr-test.c  srv-test.c  xdg-config-test.c  xdg-config.c  xdg-config.h
avahi-common/: .gitignore  Makefile.am  address.c  address.h  alternative-test.c  alternative.c  alternative.h  cdecl.h  dbus-watch-glue.c  dbus-watch-glue.h  dbus.c  dbus.h  defs.h  dns.c  domain-test.c  domain.c  domain.h  error.c  error.h  gccmacro.h  i18n.c  i18n.h  llist.h  malloc.c  malloc.h  rlist.c  rlist.h  rr.c  rr.h  simple-watch.c  simple-watch.h  strlst-test.c  strlst.c  strlst.h  thread-watch.c  thread-watch.h  timeval-test.c  timeval.c  timeval.h  utf8-test.c  (+6 more)
avahi-compat-howl/: .gitignore  Makefile.am  address-test.c  address.c  browse-domain-test.c  compat.c  funcs.txt  text-test.c  text.c  unsupported.c  warn.c  warn.h
avahi-compat-howl/include/: howl.h
avahi-compat-howl/samples/: Makefile.am  browse.c  publish.c  query.c  resolve.c
avahi-core/: .gitignore  Makefile.am  addr-util.c  addr-util.h  address.c  alternative-test.c  alternative.h  announce.c  announce.h  avahi-reflector.c  avahi-test.c  avahi.h  browse-dns-server.c  browse-domain.c  browse-service-type.c  browse-service.c  browse.c  browse.h  cache.c  cache.h  cname-test.c  conformance-test.c  core.h  dns-spin-test.c  dns-srv-rr.h  dns-test.c  dns.c  dns.h  domain-test.c  domain-util.c  domain-util.h  entry.c  fdutil.c  fdutil.h  hashmap-test.c  hashmap.c  hashmap.h  iface-linux.c  iface-linux.h  iface-none.c  (+56 more)
avahi-daemon/: .gitignore  AddressResolver.introspect  DBUS-API  DomainBrowser.introspect  EntryGroup.introspect  HostNameResolver.introspect  Makefile.am  README  RecordBrowser.introspect  Server.introspect  ServiceBrowser.introspect  ServiceResolver.introspect  ServiceTypeBrowser.introspect  avahi-daemon.conf  avahi-daemon.service.in  avahi-daemon.socket.in  avahi-dbus.conf.in  avahi-service.dtd  avahi.conf  caps.c  caps.h  chroot.c  chroot.h  dbus-async-address-resolver.c  dbus-async-host-name-resolver.c  dbus-async-service-resolver.c  dbus-domain-browser.c  dbus-entry-group.c  dbus-internal.h  dbus-protocol.c  dbus-protocol.h  dbus-record-browser.c  dbus-service-browser.c  dbus-service-type-browser.c  dbus-sync-address-resolver.c  dbus-sync-host-name-resolver.c  dbus-sync-service-resolver.c  dbus-test.py  dbus-util.c  dbus-util.h  (+30 more)
avahi-python/: Makefile.am  avahi-bookmarks.in  avahi-discover.desktop.in  avahi-discover.in  avahi-publish-address.in
avahi-python/avahi-discover/: .gitignore  Makefile.am  __init__.py  avahi-discover.desktop.in.in  (+2 more)
avahi-qt/: .gitignore  Makefile.am  qt-watch.cpp  qt-watch.h
avahi-sharp/: AddressResolver.cs  AssemblyInfo.cs  AvahiTest.cs  BrowserBase.cs  Client.cs  ClientException.cs  DomainBrowser.cs  EntryGroup.cs  HostNameResolver.cs  Makefile.am  RecordBrowser.cs  ResolverBase.cs  ServiceBrowser.cs  ServiceResolver.cs  ServiceTypeBrowser.cs  Utility.cs  avahi-sharp-docs.source  avahi-sharp.dll.config  avahi-sharp.dll.config.in  avahi-sharp.pc.in  gencfg.sh
avahi-ui/: .gitignore  Makefile.am  avahi-ui-gtk4.c  avahi-ui.c  avahi-ui.h  bssh.c  bssh.desktop.in  bssh.desktop.in.in  bvnc.desktop.in  bvnc.desktop.in.in  zssh.c  zssh.desktop.in  zvnc.desktop.in
avahi-utils/: .gitignore  Makefile.am  SimpleGladeApp.py  avahi-bookmarks.in  avahi-browse.c  avahi-browse.in  avahi-discover  avahi-discover.desktop  avahi-discover.desktop.in  avahi-discover.in  avahi-dump-all  avahi-dump-all.in  avahi-publish  avahi-publish-address  avahi-publish-address.in  avahi-publish-service  avahi-publish-service.in  avahi-publish.c  avahi-resolve-address.in  avahi-resolve-host-name.c  avahi-resolve-host-name.in  avahi-resolve.c  avahi-set-host-name.c  avahi.py  sigint.c  sigint.h  stdb.c  stdb.h
common/: .gitignore  Makefile.am  acx_pthread.m4  doxygen.m4  gcc_stack_protect.m4  qt-pie.m4
compat-bonjour/: Makefile.am  compat.c  funcs.txt  unsupported.c  warn.c  warn.h
docs/: NEWS  (+13 more)
examples/: Makefile.am  browse-services.c  client-browse-services.c  client-publish-record.c  client-publish-service-add-record.c  client-publish-service.c  core-browse-services.c  core-publish-service.c  glib-integration.c  publish-service.c  recv_fuzzer.c
initscript/: Makefile  Makefile.am
man/: .gitignore  Makefile.am  avahi-autoipd.8.xml.in  avahi-autoipd.action.8.xml.in  avahi-bookmarks.1.xml.in  avahi-browse.1.xml.in  avahi-daemon.8.xml.in  avahi-daemon.conf.5.xml.in  avahi-discover.1.xml.in  avahi-dnsconfd.8.xml.in  avahi-dnsconfd.action.8.xml.in  avahi-publish-address.1.xml.in  avahi-publish-service.1.xml.in  avahi-publish.1.xml.in  avahi-resolve-address.1.xml.in  avahi-resolve-host-name.1.xml.in  avahi-resolve.1.xml.in  avahi-set-host-name.1.xml.in  avahi.hosts.5.xml.in  avahi.service.5.xml.in  bssh.1.xml.in  xmltoman.css  xmltoman.dtd  xmltoman.xsl
nss-mdns/: Makefile  Makefile.am  bootstrap.sh  configure.ac  dns.h  query.c  util.c
tests/: .gitignore  Makefile.am  c-plus-plus-test-gen.py  c-plus-plus-test.cc  codespell-exclude.txt  codespell-ignore.txt  glib-test.c  test_invariant_browser.c
(+320 files in other folders)
